<resources>
    <string name="app_name">EGPAF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="occupation">Occupation</string>
    <string name="estimated">Estimated Age</string>
    <string name="date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="add_patient">Add Patient</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">District, Village</string>
    <string name="app_sign_up">Sign Up</string>
    <string name="app_side_menu">Menu</string>
    <string name="app_submit">Submit</string>
    <string name="app_save_account_settings">Save Account Settings</string>
    <string name="app_create_account">Create an Account</string>
    <string name="app_login">Login</string>
    <string name="app_login_no_account">Don\'t have an Account?</string>
    <string name="app_login_username">Username</string>
    <string name="app_login_password">Password</string>
    <string name="app_confirm_password">Confirm Password</string>
    <string name="app_sign_up_first_name">First Name</string>
    <string name="app_sign_up_surname">Surname</string>
    <string name="app_sign_up_email">Email</string>
    <string name="app_sign_up_terms">Terms and Conditions</string>
    <string name="app_settings">Settings</string>
    <string name="app_log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_all_rights">® All rights reserved</string>
    <string name="splash_powered">© Developed by Blessings Chidambe</string>
    <string name="proceed">Proceed</string>
    <string name="signup_success_message">Congratulations! Your account has been created successfully..</string>
    <string name="title_activity_show_patient_details">Patient Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="temp">Temp Reading</string>
    <string name="save">Save</string>
    <string name="search">Search:   <i>ID, Name, DOB, Gender, Address, Occup ...</i></string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>